# fin-stream

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  package-lock.json  package.json  schema.sql
.github/workflows/: ci-image.yml
docs/: data-model.md  loan-workspace-manifest.md  manifest.md  vision.md
docs/design/stitch_trust_deed/: DESIGN.md  code.html
docs/design/stitch_trust_deed_canvas/: code.html
docs/plans/: coolify-network-hardening.md  dashboard-streams-and-events.md  email-body-drawer.md  finstream-public-domain.md  inbox-llm-auto-link.md  moka-page-cache.md  perf-lighthouse-fixes.md  resend-email-receiving.md  session-auth.md
docs/plans/completed/: readiness-endpoint.md  (+9 more)
scripts/: load-test.sh
src/: auth.rs  cache.rs  config.rs  crypto.rs  filters.rs  lib.rs  main.rs  media_storage.rs  property_media.rs  resend.rs  scheduler.rs
src/db/: accounts.rs  emails.rs  events.rs  forecasts.rs  integrations.rs  loans.rs  mod.rs  streams.rs  users.rs  workspaces.rs
src/models/: mod.rs  tmo.rs
src/monarch/: client.rs
src/routes/: api.rs  auth.rs  health.rs  integrations.rs  media.rs  mod.rs  pages.rs  sync.rs  webhooks.rs
src/templates/: mod.rs
src/tmo/: client.rs  sync.rs
static/: app.input.css  style.css  vault.css
static/js/: local-time.js
templates/: 404.html  _doc_viewer.html  _email_body_attachments.html  _email_panel.html  _loan_mail_list.html  _slide_panel.html  base.html  canvas.html  forecast.html  inbox.html  inbox_email_detail.html  index.html  integration_base.html  integration_debug.html  integration_detail.html  integration_loan_detail.html  integration_loans.html  integration_overview.html  integration_payments.html  integration_sync.html  integrations.html  loans.html  login.html  payments.html  streams.html  sync.html  sync_logs_partial.html
tests/: forecast_test.rs
tools/: check_intg_boundary.sh  verify_quarantine.sh
tools/wasm-bench/: Makefile  README.md
tools/wasm-bench/native/: Cargo.toml  Dockerfile
tools/wasm-bench/native/src/: main.rs
tools/wasm-bench/native/templates/: bench.html
(+19 files in other folders)
