[package]
name = "trust-deeds"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
default-run = "trust-deeds"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tower-livereload = "0.9"
askama = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls-webpki-roots", "charset", "http2", "macos-system-configuration"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
urlencoding = "2"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
regex = "1"
scraper = "0.24"
aws-config = "1"
aws-sdk-s3 = "1"
aws-credential-types = "1"
aws-types = "1"
