[package]
name = "wasm-bench-native"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wasm-bench-native"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
askama = "0.15"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
